--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
+@font-face {
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+@layer base {
+  body {
+    @apply bg-gray-100 text-gray-900 antialiased;
+    font-family: 'Roboto', ui-sans-serif, system-ui, sans-serif;
+  }
+}
